// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el ProductTitle debe de mostrar el componente correcto con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`Pruebas en el ProductTitle debe mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Sin imagen
  </span>
</div>
`;
